@@ -1,5 +1,9 @@
 # $Id$
 
+2007-09-17	Sergey M. Skachkov
+
+	* core/Form/Filter.class.php: upperCase() added.
+
 2007-09-14	Dmitry E. Pismenny
 
 	* main/Base/Range.class.php: intersects() added.	
